# AuthServiceRest

./: .env  Cargo.toml  README.md
src/: main.rs
src/controllers/: mod.rs
src/controllers/schema/: mod.rs
src/helper/: mailer.rs  mod.rs
src/middleware/: error.rs  health.rs  logging.rs  mod.rs
src/models/: mod.rs
src/models/user/: mod.rs  user_address_model.rs  user_model.rs  user_phone_model.rs  user_role_model.rs
src/services/: mod.rs
src/services/auth/: confirm_email.rs  forget_password.rs  mod.rs  oauth.rs  signin.rs  signup.rs
src/services/user/: create_user.rs  delete_user.rs  find_all_users.rs  find_user.rs  mod.rs  update_user.rs
