[package]
name = "auth_service"
version = "0.1.0"
authors = ["MedAmineFouzai <54685665+MedAmineFouzai@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-rt = "2.8.0"
actix-cors = "0.6.4"
tracing-actix-web = "0.7.4"
tracing = "0.1"
tracing-log = "0.1.2"
tracing-subscriber = "0.3.16"
tracing-bunyan-formatter = "0.3.7"
jsonwebtoken = "8.3.0"
serde = "1.0.123"
serde_json = "1.0.63"
base16 = "0.2.1"
lettre = "0.10.4"
lettre_email = "0.9"
derive_more = "0.99.11"
futures = "0.3.4"
bson = "2.6.1"
dotenv = "0.15.0"
load-dotenv = "0.1.2"
bunyan = "0.1.9"
[dependencies.mongodb]
version = "2.4.0"
default-features = true
features = ["tokio-runtime"]
